[package]
name = "recursive_descent"
version = "0.1.0"
authors = ["Ma Tianqi <mtq1997@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "recursive_descent"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
